Login.html fixed the alignment

--- a/login/signstyle.css
+++ b/login/signstyle.css
@@ -60,13 +60,13 @@
 
 .logincontainer .user-details
 {
-    width: 600px;
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
     align-content: center;
     justify-content: space-around;
     position: relative;
+    width: 715px;
 }
 
 .logincontainer .user-details .inputbox
